# isax-modularized

./: .gitignore  CMakeLists.txt  README.md  main.c
include/index/: index.h  index_engine.h  node.h
include/paa/: paa.h
include/query/: answer.h  query.h  query_engine.h
include/sax/: breakpoints.h  sax.h
include/utils/: clog.h  config.h  distance.h  globals.h  sort.h
src/index/: CMakeLists.txt  index.c  index_engine.c  node.c
src/paa/: CMakeLists.txt  paa.c
src/query/: CMakeLists.txt  answer.c  query.c  query_engine.c
src/sax/: CMakeLists.txt  breakpoints.c  sax.c
src/utils/: CMakeLists.txt  config.c  distance.c  sort.c
test/: CMakeLists.txt  test_simd_paa2sax.c
